--- a/express-app/package.json
+++ b/express-app/package.json
@@ -1,8 +1,10 @@
 {
   "name": "practice",
   "version": "1.0.0",
+  "node_version": "v23.11.0",
   "main": "index.js",
   "scripts": {
+    "dev": "node  --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +18,9 @@
     "url": "https://github.com/ZimmerTyson/node-practice/issues"
   },
   "homepage": "https://github.com/ZimmerTyson/node-practice#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0",
+    "path": "^0.12.7"
+  }
 }
